--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
       </table>
         <br>
         <h3>w hada ana bah ta3arfo ch7al chbab</h3>
-        <img title="yadra kidayer"width="400" src="/b1cc9ac39dcb6fe8c556f150d3a2d44c.jpg" alt="lah ghalab">
+        <img title="yadra kidayer"width="400" src="./b1cc9ac39dcb6fe8c556f150d3a2d44c.jpg" alt="lah ghalab">
         <h3>w ida 3ajbatk w bghit t3amarha hak</h3>
-        <a download href="/b1cc9ac39dcb6fe8c556f150d3a2d44c.jpg">download</a></a>
+        <a download href="./b1cc9ac39dcb6fe8c556f150d3a2d44c.jpg">download</a></a>
         <br>
         <h3>w hada video ta3i</h3>
         <video poster="" width="400" controls loop autoplay muted> 
