--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <br>
         <h3>w hada video ta3i</h3>
         <video poster="" width="400" controls loop autoplay muted> 
-          <source src="/46d960ce32a5488924077500ebb32de1.mp4"type="video/mp4"></source> 
+          <source src="./46d960ce32a5488924077500ebb32de1.mp4"type="video/mp4"></source> 
           makach video
           </video> 
           <br>
@@ -115,7 +115,7 @@
            <embed height="500" width="500" src="https://ar.m.wikipedia.org/wiki/%D9%81%D8%A7%D9%8A%D9%83%D9%86%D8%BA%D8%B2_(%D9%85%D8%B3%D9%84%D8%B3%D9%84)"> 
           <h3>w hada wch nbghi nsma3 </h3>
           <audio controls loop muted >
-            <source src="/Bill Withers  - Just The Two Of Us (Lyrics) 1.mp3" type="audio/mp3">
+            <source src="./Bill Withers  - Just The Two Of Us (Lyrics) 1.mp3" type="audio/mp3">
             nskhat
           </audio>
           <h3>dir tcho photo ta3k nta nkomparo gadach chbab ana 3lik</h3>
